--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,9 @@
 [versions]
-kotlin = "2.0.21"
+kotlin = "2.1.0"
+betterParse = "0.4.4"
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+
+[libraries]
+betterParse = { module = "com.github.h0tk3y.betterParse:better-parse", version.ref = "betterParse" }
